// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 1.select-date 1`] = `
<section
  className="lucid-DateSelect"
  style={
    Object {
      "minWidth": 249,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={1}
    totalSlides={6}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 2.select-range 1`] = `
<section
  className="lucid-DateSelect"
  style={
    Object {
      "minWidth": 249,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={1}
    totalSlides={6}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 3.disabled-days 1`] = `
<section
  className="lucid-DateSelect"
  style={
    Object {
      "minWidth": 249,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={1}
    totalSlides={6}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 4.initial-month 1`] = `
<section
  className="lucid-DateSelect"
  style={
    Object {
      "minWidth": 249,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={1}
    totalSlides={6}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 5.mutiple-months 1`] = `
<section
  className="lucid-DateSelect lucid-DateSelect-show-divider"
  style={
    Object {
      "minWidth": 619,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={3}
    totalSlides={9}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 6.custom-modifiers 1`] = `
<section
  className="lucid-DateSelect"
  style={
    Object {
      "minWidth": 249,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={1}
    totalSlides={6}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;

exports[`DateSelect common tests [common] example testing should match snapshot(s) for 7.relative-font-size 1`] = `
<section
  className="lucid-DateSelect"
  style={
    Object {
      "height": 400,
      "width": 600,
    }
  }
>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="left"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
  <InfiniteSlidePanel
    className="lucid-DateSelect-InfiniteSlidePanel"
    offset={0}
    onSwipe={[Function]}
    slidesToShow={1}
    totalSlides={6}
  >
    <InfiniteSlidePanel.Slide
      className="lucid-DateSelect-slide"
    />
  </InfiniteSlidePanel>
  <div>
    <ChevronThinIcon
      className="lucid-DateSelect-chevron"
      direction="right"
      isClickable={true}
      onClick={[Function]}
      size={32}
    />
  </div>
</section>
`;
